--- a/src/app/conta_usuario/orders-user/orders-user.component.html
+++ b/src/app/conta_usuario/orders-user/orders-user.component.html
@@ -1,7 +1,8 @@
-<div class="col-sm-12">
+<div class="col-sm-12" style="background-color: white;">
+
     <div class="row">
         <div class="col-sm-12">
-            <span *ngIf="orders.length === 0">
+            <span *ngIf="!orders">
              <div>
                 <div class="face001"></div>
             </div>
