--- a/src/app/inicio/assessments/assessments.component.html
+++ b/src/app/inicio/assessments/assessments.component.html
@@ -2,29 +2,25 @@
     <h1>Avaliações</h1>
 </div>
 <div class="c2 col-sm-12">
-    4,8 127 avaliações para O Rei do Caldo Juazeir
+    {{ service.getDadosEmpresa().nota.nota }} ({{ service.getDadosEmpresa().nota.totalavals }}) avaliações para {{ service.getDadosEmpresa().nome }}
 </div>
 
 <div class="item-assessment col-sm-12" *ngFor="let item of itens">
-    <div class="item-assessment-1 col-sm-12">Iago Delsuc</div>
+    <div class="item-assessment-1 col-sm-12"> {{ item.nome }} </div>
     <div class="item-assessment-2 col-sm-12">
-        <div class="cor1"> 4,8</div>
+        <div class="cor1"> {{ item.nota }} </div>
         <div>
-            <mat-icon class="cor1">star</mat-icon>
-            <mat-icon class="cor1">star</mat-icon>
-            <mat-icon class="cor1">star</mat-icon>
-            <mat-icon class="cor1">star</mat-icon>
-            <mat-icon class="cor1">star</mat-icon>
+            <mat-icon class="cor1" *ngFor='let in of counter(item.nota) ;let i = index'>star</mat-icon>
         </div>
-        <div>16/06/2020</div>
+        <div> {{ item.texto }} </div>
 
 
     </div>
     <div class="item-assessment-3 col-sm-12">Entrega super rápida</div>
     <div class="item-assessment-4 col-sm-12">
-        <div> Resposta - Açaí Concept</div>
+        <div> Resposta - {{ service.getDadosEmpresa().nome }} </div>
         <div>
-            <div class="item-assessment-5 col-sm-12">Agradecemos pela sua avaliação!!!</div>
+            <div class="item-assessment-5 col-sm-12"> {{ item.resposta }} </div>
         </div>
 
     </div>
