--- a/src/app/inicio/login/login.component.html
+++ b/src/app/inicio/login/login.component.html
@@ -21,5 +21,5 @@
 </div>
 <div class="scd">
     <div>Ainda não tem uma conta?</div>
-    <button mat-raised-button> Cadastre-se </button>
+    <button mat-raised-button color="warn" routerLink="registration" mat-dialog-close> Cadastre-se </button>
 </div>
