--- a/src/app/conta_usuario/avals/avals.component.html
+++ b/src/app/conta_usuario/avals/avals.component.html
@@ -1,3 +1,7 @@
+<div class="col-sm-12 text-center" style="margin-bottom: 20px;">
+    <img width="40px" [src]="'../../../assets/images/others/star.png'">
+</div>
+
 <div class="avi" *ngIf="itens.length === 0">
     Você ainda fez nenhuma avaliação
 </div>
@@ -14,6 +18,6 @@
     <div class="ee"> Entrega ráida! Obrigado. </div>
     <div class="col-sm-12 jj">
         <div>Nota 4.5</div>
-        <a href="javascript:;" color="primary" mat-button> Editar </a>
+        <!--<a href="javascript:;" color="primary" mat-button> Editar </a>-->
     </div>
 </div>
