--- a/src/app/conta_usuario/notifications/notifications.component.html
+++ b/src/app/conta_usuario/notifications/notifications.component.html
@@ -1,1 +1,10 @@
-<p>notifications works!</p>
+<div class="col-sm-12 item" *ngFor="let item of notifications">
+    <div class="a">
+        <div class="aa">
+            <mat-icon>notification_important</mat-icon> {{ item.titulo }} </div>
+        <div> {{ item.info }} </div>
+    </div>
+    <div>
+        {{ item.notificacao }}
+    </div>
+</div>
