--- a/src/app/inicio/bag/bag.component.css
+++ b/src/app/inicio/bag/bag.component.css
@@ -5,43 +5,41 @@
         background-repeat: no-repeat;
         background-size: 200px;
     }
-
+    
     .bag {
         display: grid;
         align-items: center;
         text-align: center;
         grid-template-columns: 1fr;
         justify-items: center;
-        box-shadow: 0px 6px 9px rgb(80 80 80 / 49%);
-        height: 86vh;
-        /*width: 33%;*/
+        box-shadow: -4px 2px 4px rgb(208 208 208);
+        height: 88vh;
         width: 100%;
-        /*position: fixed;*/
-        max-width: 417px;
+        max-width: 436px;
     }
-
+    
     .c1 {
         font-weight: 500;
         color: #989292;
     }
-
+    
     .bagfixo {
         position: fixed;
         width: 33%;
-        margin-top: -93px;
+        margin-top: -85px;
         height: 100vh;
     }
-
+    
     .ppre {
         font-weight: 600;
     }
-
+    
     .item-cart {
         text-align: initial;
         border-bottom: 1px solid #d8d8d8;
         color: #585858;
     }
-
+    
     .item-cupom {
         justify-content: space-between;
         display: flex;
@@ -52,48 +50,48 @@
         border-top: 1px solid #d0cdcd;
         margin-top: 10px;
     }
-
+    
     .cupom-01 {
         text-align: left;
         padding-left: 25px;
     }
-
+    
     .cupom-02 {
         font-weight: 500;
         font-size: 16px;
     }
-
+    
     .cupom-03 {
         font-size: 12px;
     }
-
+    
     .box-monis {
         display: flex;
         justify-content: space-between;
         margin-top: 15px;
         margin-bottom: 10px;
     }
-
+    
     .btbag {
         height: 50px;
         width: 100%;
     }
-
+    
     .inbag {
         height: 98%;
     }
-
+    
     .abto {
         padding-top: 20px;
         border-top: 1px solid #d0cdcd;
     }
-
+    
     .item-cart-name {
         margin-top: 10px;
         font-size: 18px;
         font-weight: 500;
     }
-
+    
     .item-cart-jus {
         /*display: flex;*/
         /*justify-content: space-between;*/
@@ -105,7 +103,7 @@
         color: rgb(88, 88, 88);
         font-size: 12px;
     }
-
+    
     .bsgin {
         text-align: initial;
         color: #333232;
@@ -115,22 +113,22 @@
         padding-bottom: 20px;
         margin-top: 10px;
     }
-
+    
     .a-itens-cart {
         max-height: 205px;
         overflow: auto;
         padding: 0px;
     }
-
+    
     .iccupom {
         font-size: 41px;
         color: #3F51B5;
     }
-
+    
     .ftotal {
         font-weight: 600;
     }
-
+    
     .xj6 {
         display: flex;
         justify-content: space-between;
