--- a/src/app/inicio/footer/footer.component.html
+++ b/src/app/inicio/footer/footer.component.html
@@ -1,1 +1,30 @@
-<p>footer works!</p>
+<div class="col-sm-12" style="margin-top: 100px;margin-bottom: 90px;">
+    <div class="row">
+        <div class="col-sm-2">
+            <img width="70px" [src]="service.getDadosEmpresa().imagem" alt="logo" style="border-radius: 10px;">
+        </div>
+
+
+        <div class="col-sm-10">
+            <div class="row">
+                <div class="col-sm-12" style="font-weight: 500;">Social</div>
+                <div class="col-sm-3">
+                    <mat-icon class="ic-soc">facebook</mat-icon>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10" style="    font-size: 14px;
+        color: #636363;">
+            © Copyright 2020 - {{service.getDadosEmpresa().nome}} - Todos os direitos reservados {{service.getDadosEmpresa().nome}} com Agência de Lojas Online S.A. / {{service.getDadosEmpresa().rua}}, nº {{service.getDadosEmpresa().numero}}, {{service.getDadosEmpresa().bairro}}
+            - CEP {{service.getDadosEmpresa().cep}}
+        </div>
+    </div>
+
+</div>
