--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -1,25 +1,25 @@
-<div class="col-sm-12" *ngIf="service.getStatusLoaderStore()">
-    <div class="col-sm-12" style="padding-right: 0px;">
+<div class="col-sm-12 mp0R" *ngIf="service.getStatusLoaderStore()">
+    <div class="col-sm-12 mp0L" style="padding-right: 0px;">
 
-        <div class="col-sm-12" style="padding-right: 0px;">
-            <div class="capa col-sm-12" [lazyLoad]="service.getDadosEmpresa().capa">
+        <div class="col-sm-12 mp0L" style="padding-right: 0px;">
+            <div class="capa col-sm-12 mp0L" [lazyLoad]="service.getDadosEmpresa().capa">
             </div>
         </div>
 
-        <div class="col-sm-12" style="margin-top: 20px;">
+        <div class="col-sm-12 mp0L" style="margin-top: 20px;">
             <mat-icon class="cor1">star</mat-icon><span class="cor1"> {{ service.getDadosEmpresa().nota.nota }}
       </span>({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)
         </div>
 
-        <div class="c1 col-sm-12">
+        <div class="c1 col-sm-12 mp0L">
             {{ service.getDadosEmpresa().nome }}
         </div>
 
-        <div class="c2 col-sm-12">
+        <div class="c2 col-sm-12 mp0L">
             {{ service.getDadosEmpresa().descricao }}
         </div>
 
-        <div class="c3 col-sm-12">
+        <div class="c3 col-sm-12 mp0L">
             {{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}
         </div>
 
@@ -66,12 +66,12 @@
 
 
 
-    <div class="row">
+    <div class="row mp0R">
 
-        <div class="col-sm-12" *ngFor="let item of service.getDadosEmpresa().categorias">
+        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias">
             <div class="aicn col-sm-12"> {{ item.nome }} </div>
-            <div class="row">
-                <div style="padding: 10px;" class="col-sm-6" *ngFor="let product of item.itens">
+            <div class="row mp0R">
+                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens">
                     <div class="item col-sm-12" (click)="openItem(product)">
                         <div class="row">
                             <div class="col-sm-5">
@@ -97,7 +97,7 @@
     </div>
 
 
-    <div class="col-sm-12">
+    <div class="col-sm-12" style="margin-top:100px;">
         <mat-divider></mat-divider>
     </div>
 
@@ -105,6 +105,13 @@
 
         <div class="a-assessments col-sm-12">
             <app-assessments></app-assessments>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <app-footer></app-footer>
         </div>
 
     </div>
