--- a/src/app/conta_usuario/orders-user/orders-user.component.html
+++ b/src/app/conta_usuario/orders-user/orders-user.component.html
@@ -23,7 +23,7 @@
                     <div class="col-sm-12"> {{ item.total | currency:'BRL':true }} </div>
                 </div>
                 <div class="col-sm-4 abt-order">
-                    <button color="primary" mat-button (click)="order(item)"> Avaliar </button>
+                    <button color="primary" mat-button (click)="avOrder(item)"> Avaliar </button>
                     <button color="primary" mat-flat-button (click)="order(item)" style="margin-left: 3px;"> Ver pedido </button>
                 </div>
             </div>
