--- a/src/app/conta_usuario/perfil-user/perfil-user.component.html
+++ b/src/app/conta_usuario/perfil-user/perfil-user.component.html
@@ -24,11 +24,12 @@
 
 
             <a mat-list-item class="itemsli" routerLink="/">
-                <mat-icon class="cc">west</mat-icon>
+                <mat-icon class="cc">shopping_cart
+                </mat-icon>
                 Fazer pedido
             </a>
 
-            <a mat-list-item class="itemsli" (click)="onClickMenu('/perfil-user/', 'Pedidos')">
+            <a mat-list-item class="itemsli" (click)="onClickMenu('/perfil-user/orders', 'Pedidos')">
                 <mat-icon class="cc">shopping_bag</mat-icon>
                 Meus pedidos
             </a>
