--- a/src/app/inicio/info/info.component.html
+++ b/src/app/inicio/info/info.component.html
@@ -22,9 +22,11 @@
     <mat-icon class="ic">credit_card</mat-icon> Formas de pagamento
 </div>
 
-<div style="display: flex; grid: 10px;">
-    <div style="background-color: rgb(226, 226, 226); border-radius: 10px; padding: 5px;margin-left: 3px;" *ngFor="let item of dadosEmpresa.formaspagamento"> {{ item.nome }} </div>
-
+<div class="col-sm-12">
+    <div class="row" style="gap: 5px">
+        <div class="col-sm-3 text-center" style="background-color: rgb(226, 226, 226); border-radius: 10px; padding: 5px;" *ngFor="let item of dadosEmpresa.formaspagamento"> {{ item.nome }}
+        </div>
+    </div>
 </div>
 
 <div>
