--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -1,13 +1,13 @@
-<div class="col-sm-12">
+<div class="col-sm-12 mp0R mp0L">
 
     <div class="arealoader" *ngIf="!statusLoader">
         <mat-spinner></mat-spinner>
     </div>
 
-    <div class="row" *ngIf="statusLoader" style="    padding: 40px;
+    <div class="row mp0R mp0L" *ngIf="statusLoader" style="    padding: 40px;
     border-bottom: 1px solid #f1e8e8;">
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 mp0R mp0L">
             <img width="100%" style="height: 400px;" class="img-resposive" [lazyLoad]="itemCatalogo.imagem" alt="">
         </div>
         <div class="col-sm-6">
@@ -64,9 +64,9 @@
             </div>
 
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-12 mp0R mp0L">
             <div class="ffo">
-                <button mat-stroked-button color="warn" routerLink="/" style="margin-right: 10px;">Cancelar</button>
+                <!--<button mat-stroked-button color="warn" routerLink="/" style="margin-right: 10px;">Cancelar</button>-->
 
                 <div style="display: flex;">
 
