--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -24,7 +24,7 @@
         </div>
 
 
-        <div class="c4 col-sm-12">
+        <div class="c4 col-sm-12 mp0L">
 
             <div class="example-action-buttons">
             </div>
@@ -51,8 +51,8 @@
 
         </div>
 
-        <div class="col-sm-12 c5 ">
-            <mat-form-field appearance="fill">
+        <div class="col-sm-12 c5 mp0L">
+            <mat-form-field appearance="fill" style="width: 100%;">
                 <mat-label>Filtrar catálogo</mat-label>
                 <mat-select>
                     <mat-option *ngFor="let item of service.getDadosEmpresa().categorias">
