--- a/src/app/conta_usuario/data-user/data-user.component.html
+++ b/src/app/conta_usuario/data-user/data-user.component.html
@@ -1,67 +1,45 @@
-<div class="col-sm-12" [formGroup]="form">
+<div class="col-sm-6" [formGroup]="form" style="margin-top: 30px;">
 
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Nome </mat-label>
-            <input matInput formControlName="nome">
-        </mat-form-field>
-    </div>
+    <mat-form-field>
+        <mat-label> Nome </mat-label>
+        <input matInput formControlName="nome">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> Sobrenome </mat-label>
+        <input matInput formControlName="sobrenome">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> Telefone </mat-label>
+        <input matInput formControlName="telefone">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> CPF </mat-label>
+        <input matInput formControlName="cpf">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> Data de nascimento </mat-label>
+        <input matInput formControlName="datanascimento">
+    </mat-form-field>
 
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Telefone </mat-label>
-            <input matInput formControlName="telefone">
-        </mat-form-field>
-    </div>
 
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Rua </mat-label>
-            <input matInput formControlName="rua">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Número </mat-label>
-            <input matInput formControlName="numero">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Bairro </mat-label>
-            <input matInput formControlName="bairro">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Cidade </mat-label>
-            <input matInput formControlName="cidade">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Complemento </mat-label>
-            <input matInput formControlName="complemento">
-        </mat-form-field>
-    </div>
-
-    <div class="col-sm-12">
-        <mat-form-field>
-            <mat-label> Ponto de referência </mat-label>
-            <input matInput formControlName="ponto_referencia">
-        </mat-form-field>
-    </div>
 
     <div>
-
+        <button mat-flat-button color="warn" (click)="oncliClickSalvar()">Salvar</button>
     </div>
 
-    <div class="col-sm-12">
-        <button mat-flat-button color="primary">Salvar</button>
-    </div>
-
+</div>
+<div [formGroup]="formulario" class="col-sm-6" style="margin-top: 30px;">
+    <mat-form-field>
+        <mat-label> Senha atual </mat-label>
+        <input matInput type="password" formControlName="senha">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> Nova senha </mat-label>
+        <input matInput type="password" formControlName="novasenha">
+    </mat-form-field>
+    <mat-form-field>
+        <mat-label> Confirme a nova senha </mat-label>
+        <input matInput type="password" formControlName="senhaconfirmacao">
+    </mat-form-field>
+    <button mat-flat-button color="warn" (click)="onclicksalvar()"> Salvar nova senha </button>
 </div>
