--- a/src/app/payment-steps/finish/finish.component.html
+++ b/src/app/payment-steps/finish/finish.component.html
@@ -3,13 +3,13 @@
         <a style="text-decoration: none;" mat-button href="javascript:;" routerLink="/">Início</a> /
         <a style="text-decoration: none;" mat-button href="javascript:;" color="primary">Finalizar pedido</a>
     </div>
-    <div class="col-sm-12">
-        <div class="col-sm-12" style="padding-top: 15px;">
+    <div class="col-sm-12 mp0R mp0L">
+        <div class="col-sm-12 mp0R mp0L" style="padding-top: 15px;">
             <h1 style="font-weight: 500;"> Finalize seu pedido </h1>
         </div>
 
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12  mp0L">
                 <div class="col-sm-12" style="height: 220px;">
                     <mat-tab-group mat-align-tabs="start">
 
@@ -21,20 +21,26 @@
                                         <!--<mat-icon class="icmap">map</mat-icon>-->
                                     </div>
                                     <div>
-                                        <div class="nr">Rua Canada, 83</div>
-                                        <div class="nr1">Casa - Juazeiro/BA</div>
+                                        <div class="nr">
+
+                                            <span *ngIf="!bagServ.getStatusEndereco()"> Escolha um endereço </span>
+                                            <span *ngIf="bagServ.getStatusEndereco()"> Escolha um endereço </span>
+
+                                        </div>
+                                        <div *ngIf="!bagServ.getStatusEndereco()" class="nr1"> Você ainda não informou seu endereço </div>
+                                        <div *ngIf="bagServ.getStatusEndereco()" class="nr1">
+                                            {{ bagServ.getEnderecoEntrega().rua }} - {{ bagServ.getEnderecoEntrega().cidade.nome }}
+                                        </div>
                                     </div>
                                 </div>
-                                <div>
-                                    <button mat-stroked-button color="primary">
-                    <mat-icon>loop</mat-icon>
-                    Trocar
-                  </button>
-                                </div>
+
                             </div>
 
                             <div class="col-sm-12 ggf">
-                                Estimativa de entrega, 50 - 60 minutos
+                                Estimativa de entrega, {{ service.getDadosEmpresa().tempoentrega }}
+                            </div>
+                            <div class="col-sm-12" style="margin-top: 10px;">
+                                <button mat-flat-button color="warn" (click)="bagServ.onclickEntregaTipo()"> Pedido para entrega </button>
                             </div>
                         </mat-tab>
 
@@ -46,23 +52,25 @@
                                         <!--<mat-icon class="icmap">map</mat-icon>-->
                                     </div>
                                     <div>
-                                        <div class="nr">Rua Canada, 83</div>
-                                        <div class="nr1">Casa - Juazeiro/BA</div>
+                                        <div class="nr"> {{ service.getDadosEmpresa().rua }} , {{ service.getDadosEmpresa().numero }}</div>
+                                        <div class="nr1">Loja - {{ service.getDadosEmpresa().bairro }}/{{ service.getDadosEmpresa().cidade }}</div>
                                     </div>
                                 </div>
 
                             </div>
-
+                            <div class="col-sm-12" style="margin-top: 10px;">
+                                <button mat-flat-button color="warn" (click)="bagServ.onclickRetiradaTipo()"> Pedido para retirada </button>
+                            </div>
                         </mat-tab>
                     </mat-tab-group>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm-12" style="border-top: 1px solid rgb(249 231 231);; padding-top: 20px;margin-top: 5px;">
-                        <h1 style="font-weight: 500;">Metodo de pagamento</h1>
-                        <div class="row">
+                <div class="row mp0R mp0L">
+                    <div class="col-sm-12 mp0R mp0L" style="border-top: 1px solid rgb(249 231 231);; padding-top: 20px;margin-top: 5px;">
+                        <h1 style="font-weight: 500;">Método de pagamento</h1>
+                        <div class="row mp0R mp0L">
 
-                            <div class="col-sm-5" style="text-align: center;" *ngFor="let item of service.getDadosEmpresa().formaspagamento">
+                            <div class="col-sm-3 mp0R mp0L" style="text-align: center;" *ngFor="let item of service.getDadosEmpresa().formaspagamento">
 
                                 <button mat-stroked-button class="itefp" color="primary" (click)="addFp(item)">
                                     <mat-icon class="mat-18">payments</mat-icon> {{ item.nome }}
@@ -86,7 +94,7 @@
                 </div>
 
                 <div class="col-sm-12 yy">
-                    <button class="btcon" mat-raised-button color="warn" (click)="onClickFinalizarPedido()">Fazer pedido</button>
+                    <button [disabled]="statusBtenviar" class="btcon" mat-raised-button color="warn" (click)="onClickFinalizarPedido()">Fazer pedido</button>
                 </div>
 
             </div>
